--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   provider: ^6.0.5
+  url_launcher: ^6.1.14
 
 
   # The following adds the Cupertino Icons font to your application.
